# CHIP8-interpreter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chip8_scratch.md  main.cpp
include/: chip8.h  display.h  keyboard.h  memory.h  speakers.h
include/display/: display_interface.h  monitor.h
include/inputs/: inputs_interface.h  keyboard.h
include/sound/: sound_interface.h  speakers.h
src/: chip8.cpp  display.cpp  keyboard.cpp  memory.cpp  speakers.cpp
